# actix-rust-restful

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  env.example
.cursor/rules/: rust-rules.mdc
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  t_refresh_token.rs  t_todos.rs  t_users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250731_042456_create_user_table.rs  m20250805_021726_create_todo_table.rs
src/: app_state.rs  config.rs  lib.rs  main.rs  main.rs.bk  validators.rs
src/config/: constants.rs
src/controllers/: auth_controller.rs  home_controller.rs  mod.rs  not_found_controller.rs  todo_controller.rs
src/daos/: mod.rs  redis_dao.rs
src/middlewares/: auth_middleware.rs  mod.rs  rate_limit_middleware.rs
src/models/: auth.rs  db.rs  errors.rs  jwt.rs  mod.rs  request.rs  response.rs  todo.rs
src/repositories/: database_mockup.rs  mod.rs  refresh_token_repository.rs  todo_repository.rs  user_repository.rs
src/services/: auth_service.rs  http_request_service.rs  job_service.rs  mod.rs  todo_service.rs
src/utils/: HTTP_CLIENT_README.md  common.rs  hash.rs  http_example.rs  http_request.rs  jwt.rs  mod.rs  request_handler.rs  response_handler.rs  validator.rs
wrk-test/: auth-me.lua  login.lua
