[package]
name = "actix_rust_restful"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = "1.47.0"
uuid = { version = "1.17.0", features = ["v4"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
chrono = "0.4.41"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
entity = { path = "entity" }
migration = { path = "migration" }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
thiserror = "1.0"
actix-web-validation = {version = "0.8.0", features = ["validator"] }
validator = { version = "0.20.0", features = ["derive"] }
