[package]
name = "actix_rust_restful"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework cho Rust - tạo HTTP server và API endpoints
actix-web = "4.11.0"

# Logging utilities
env_logger = "0.11.8"  # Logger implementation cho env_logger
log = "0.4.27"         # Logging facade cho Rust

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }  # Serialization framework
serde_json = "1.0"                                   # JSON serialization/deserialization

# Async runtime và utilities
futures = "0.3"  # Async programming utilities
tokio = "1.47.0" # Async runtime cho Rust

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }  # UUID generation
dotenv = "0.15.0"                                  # Load environment variables từ .env file

# Memory và time management
once_cell = "1.21.3"  # Lazy initialization cho static variables, chỉ tải khi lần đầu sử dụng, tránh tải ngay khi khởi động tốn tài nguyên dùng cho config, db connection, cache computation, thread-safe
chrono = "0.4.41"     # Date/time utilities

# Database ORM
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }  # Async ORM cho PostgreSQL
entity = { path = "entity" }      # Generated database entities
migration = { path = "migration" } # Database migrations

# Security
argon2 = "0.5.3"      # Password hashing algorithm
jsonwebtoken = "9.3.0" # JWT token generation và validation

# Error handling
thiserror = "1.0"  # Derive macro cho custom error types

# Validation
actix-web-validation = {version = "0.8.0", features = ["validator"] }  # Integration giữa actix-web và validator
validator = { version = "0.20.0", features = ["derive"] }              # Request validation với derive macros
derive_more = "2.0.1"  # Additional derive macros (Display, etc.)

# Text processing
regex = "1.11.1"  # Regular expressions
