[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

# time
chrono = { version = "^0.4", features = ["serde"] }

[dependencies.sea-orm]
version = "1.1.0" # sea-orm version
